# aisecurity

./: .dockerignore  .env.example  .gitignore  AGENT.md  README.md  agent.md  alembic.ini  compose.yaml  package-lock.json  package.json  pyproject.toml
apps/: __init__.py
apps/api/: __init__.py  __main__.py  admin.py  approval_submission.py  approvals.py  audit_records.py  delegations.py  dependencies.py  errors.py  grants.py  main.py  management_models.py  permission_requests.py  sessions.py  settings.py
apps/web/: next.config.mjs  package-lock.json  package.json  vitest.config.mjs
apps/worker/: __init__.py  __main__.py  celery_app.py  healthcheck.py  settings.py  tasks.py
config/: __init__.py  loader.py  settings.base.toml  settings.dev.toml  settings.prod.toml  settings.test.toml
config/policy/: approval_rules.toml  permission_mappings.toml  policy_manifest.toml  risk_rules.toml
docker/: python-requirements.txt  python.Dockerfile  web.Dockerfile
docs/: agent-identity-permission-api-spec.md  agent-identity-permission-database-design.md  agent-identity-permission-development-guide.md  agent-identity-permission-integration-spec.md  agent-identity-permission-prd.md  agent-identity-permission-srs.md  agent-identity-permission-state-machine.md  agent-identity-permission-technical-design.md
docs/release/: TASK-019-release-checklist.md  TASK-019-test-matrix.md
docs/tasks/: TASK-001-repo-scaffold.md  TASK-002-runtime-entry-and-health.md  TASK-003-local-dev-compose-and-config.md  (+17 more)
migrations/: env.py
scripts/: run_task_018_tests.py  run_task_018_tests.sh
(+77 files in other folders)
