[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aisecurity"
version = "0.1.0"
description = "Monorepo scaffold for the Agent Identity & Permission system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = [
  "tests/unit",
  "tests/integration",
  "tests/e2e",
]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["apps", "packages", "tests"]
