[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aisecurity"
version = "0.1.0"
description = "Monorepo scaffold for the Agent Identity & Permission system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "celery>=5.4,<6",
  "fastapi>=0.115,<1",
  "uvicorn>=0.34,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]
exclude = ["docker*", "migrations*", "tests*"]

[tool.pytest.ini_options]
testpaths = [
  "tests/unit",
  "tests/integration",
  "tests/e2e",
]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["apps", "packages", "tests"]
